edit contact form input type

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ permalink: /contact/
                 <form role="form">
                   <div class="form-group">
                     <label for="InputName1">姓名</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1">
+                    <input type="text" class="form-control" id="exampleInputEmail1">
                   </div>
                   <div class="form-group">
                     <label for="InputEmail1">邮箱地址</label>
@@ -23,7 +23,7 @@ permalink: /contact/
                   </div>
                   <div class="form-group">
                     <label for="InputSubject1">标题</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1">
+                    <input type="text" class="form-control" id="exampleInputEmail1">
                   </div>
                   <div class="form-group">
                     <label for="message1">内容</label>
