uncomment paginator in config

--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@ permalink: /blog/
                     <div class="hline"></div>
 
                     <div class="spacing"></div>
-                {% endunless%}
+                {% endfor%}
             {% endfor %}
                 <section class="pagination" style="text-align:center">
                   {% if paginator.previous_page %}
