--- a/blog.html
+++ b/blog.html
@@ -9,31 +9,29 @@ permalink: /blog/
 
         <! -- BLOG POSTS LIST -->
         <div class="col-lg-8">
-        {% for post in paginator.posts %}
-                {% for post in site.categories['blog'] %}
-                    <! -- Blog Post -->
-                    <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}"></p>
-                    <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
-                    <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | 作者: {{ post.author }}</csmall></p>
-                    {{ post.excerpt }}
-                    <p><a href="{{ post.url | prepend: site.baseurl }}">[查看更多]</a></p>
-                    <div class="hline"></div>
+        {% for post in site.categories['blog'] %}
+                <! -- Blog Post -->
+                <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}"></p>
+                <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
+                <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | 作者: {{ post.author }}</csmall></p>
+                {{ post.excerpt }}
+                <p><a href="{{ post.url | prepend: site.baseurl }}">[查看更多]</a></p>
+                <div class="hline"></div>
 
-                    <div class="spacing"></div>
-                {% endfor%}
-            {% endfor %}
-                <section class="pagination" style="text-align:center">
-                  {% if paginator.previous_page %}
-                    {% if paginator.previous_page == 1 %}
-                    <a href="/" class="btn btn-outline">‹ Newer</a>
-                    {% else %}
-                    <a href="/page{{ paginator.previous_page }}" class="btn btn-outline">‹ Newer</a>
-                    {% endif %}
-                  {% endif %}
-                  {% if paginator.next_page %}
-                    <a href="/page{{ paginator.next_page }}" class="btn btn-outline">Older ›</a>
-                  {% endif %}
-                </section>
+                <div class="spacing"></div>
+        {% endfor %}
+<!--             <section class="pagination" style="text-align:center">
+              {% if paginator.previous_page %}
+                {% if paginator.previous_page == 1 %}
+                <a href="/" class="btn btn-outline">‹ Newer</a>
+                {% else %}
+                <a href="/page{{ paginator.previous_page }}" class="btn btn-outline">‹ 最新</a>
+                {% endif %}
+              {% endif %}
+              {% if paginator.next_page %}
+                <a href="/page{{ paginator.next_page }}" class="btn btn-outline">较早 ›</a>
+              {% endif %}
+            </section> -->
         </div><! --/col-lg-8 -->
 
         {% include sidebar.html %}
