--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@ permalink: /contact/
                 <p>{{ site.about }}</p>
                 <form role="form">
                   <div class="form-group">
-                    <label for="InputName1">姓名</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1">
+                    <label for="name">姓名</label>
+                    <input type="text" placeholder="输入姓名" class="form-control" id="name" name="name" tabindex="1"/>
                   </div>
                   <div class="form-group">
                     <label for="InputEmail1">邮箱地址</label>
@@ -31,6 +31,44 @@ permalink: /contact/
                   </div>
                   <button type="submit" class="btn btn-theme">立即发送</button>
                 </form>
+
+<!--           <form name="sentMessage" id="contactForm" novalidate>
+              <div class="row control-group">
+                  <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <label>姓名</label>
+                      <input type="text" class="form-control" placeholder="姓名" id="name" required data-validation-required-message="Please enter your name.">
+                      <p class="help-block text-danger"></p>
+                  </div>
+              </div>
+              <div class="row control-group">
+                  <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <label>邮箱</label>
+                      <input type="email" class="form-control" placeholder="邮箱" id="email" required data-validation-required-message="Please enter your email address.">
+                      <p class="help-block text-danger"></p>
+                  </div>
+              </div>
+              <div class="row control-group">
+                  <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <label>电话</label>
+                      <input type="tel" class="form-control" placeholder="电话" id="phone" required data-validation-required-message="Please enter your phone number.">
+                      <p class="help-block text-danger"></p>
+                  </div>
+              </div>
+              <div class="row control-group">
+                  <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <label>内容</label>
+                      <textarea rows="5" class="form-control" placeholder="内容" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                      <p class="help-block text-danger"></p>
+                  </div>
+              </div>
+              <br>
+              <div id="success"></div>
+              <div class="row">
+                  <div class="form-group col-xs-12">
+                      <button type="submit" class="btn btn-success btn-lg">发送</button>
+                  </div>
+              </div>
+          </form> -->
         </div><! --/col-lg-8 -->
 
         <div class="col-lg-4">
