remove more info btn

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@ permalink: /
                 <i class="fa fa-heart-o"></i>
                 <h4>设计</h4>
                 <p>好的体验不仅仅是满足用户需求和友好的可用性，甚至能让用户感到「怦然心动」，让设计更加「贴心」。</p>
-                <p><br/><a href="#" class="btn btn-theme">查看更多</a></p>
+<!--                 <p><br/><a href="#" class="btn btn-theme">查看更多</a></p> -->
             </div>
             <div class="col-md-4">
                 <i class="fa fa-flask"></i>
                 <h4>咨询服务</h4>
                 <p>我们提供「 UX 咨询」，平衡「业务目标」、「技术目标」和「用户目标」。</p>
-                <p><br/><a href="#" class="btn btn-theme">查看更多</a></p>
+<!--                 <p><br/><a href="#" class="btn btn-theme">查看更多</a></p> -->
             </div>
             <div class="col-md-4">
                 <i class="fa fa-trophy"></i>
                 <h4>培训</h4>
                 <p>收费和免费培训都会有的。「不打针」「不吃药」「无痛苦」「24 小时搞定 UI/UX 设计」等等，我们都没有。</p>
-                <p><br/><a href="#" class="btn btn-theme">查看更多</a></p>
+<!--                 <p><br/><a href="#" class="btn btn-theme">查看更多</a></p> -->
             </div>		 				
         </div>
     </div><! --/container -->
