--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,6 @@ permalink: /blog/
 
         <! -- BLOG POSTS LIST -->
         <div class="col-lg-8">
-        {% if site.paginate %}
         {% for post in site.categories['blog'] %}
                 <! -- Blog Post -->
                 <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}"></p>
@@ -21,6 +20,20 @@ permalink: /blog/
 
                 <div class="spacing"></div>
         {% endfor %}
+        
+        {% if paginator.total_pages > 1 %}
+        <ul class="pager">
+            {% if paginator.previous_page %}
+            <li class="previous">
+                <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
+            </li>
+            {% endif %}
+            {% if paginator.next_page %}
+            <li class="next">
+                <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
+            </li>
+            {% endif %}
+        </ul>
         {% endif %}
 <!--             <section class="pagination" style="text-align:center">
               {% if paginator.previous_page %}
