--- a/blog.html
+++ b/blog.html
@@ -21,18 +21,53 @@ permalink: /blog/
                 <div class="spacing"></div>
         {% endfor %}
 
-<!--             <section class="pagination" style="text-align:center">
-              {% if paginator.previous_page %}
-                {% if paginator.previous_page == 1 %}
-                <a href="/" class="btn btn-outline">‹ Newer</a>
+        <div id="post-pagination" class="pagination">
+          {% if paginator.previous_page %}
+            <p class="previous">
+              {% if paginator.previous_page == 1 %}
+                <a href="/">上一页</a>
+              {% else %}
+                <a href="{{ paginator.previous_page_path }}">上一页</a>
+              {% endif %}
+            </p>
+          {% else %}
+            <p class="previous disabled">
+              <span>上一页</span>
+            </p>
+          {% endif %}
+
+          <ul class="pages">
+            <li class="page">
+              {% if paginator.page == 1 %}
+                <span class="current-page">1</span>
+              {% else %}
+                <a href="/">1</a>
+              {% endif %}
+            </li>
+
+            {% for count in (2..paginator.total_pages) %}
+              <li class="page">
+                {% if count == paginator.page %}
+                  <span class="current-page">{{ count }}</span>
                 {% else %}
-                <a href="/page{{ paginator.previous_page }}" class="btn btn-outline">‹ 最新</a>
+                  <a href="/page{{ count }}">{{ count }}</a>
                 {% endif %}
-              {% endif %}
-              {% if paginator.next_page %}
-                <a href="/page{{ paginator.next_page }}" class="btn btn-outline">较早 ›</a>
-              {% endif %}
-            </section> -->
+              </li>
+            {% endfor %}
+          </ul>
+
+          {% if paginator.next_page %}
+            <p class="next">
+              <a href="{{ paginator.next_page_path }}">下一页</a>
+            </p>
+          {% else %}
+            <p class="next disabled">
+              <span>下一页</span>
+            </p>
+          {% endif %}
+
+        </div>
+
         </div><! --/col-lg-8 -->
 
         {% include sidebar.html %}
