--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@ permalink: /blog/
                 <div class="spacing"></div>
         {% endfor %}
 
-        <div id="post-pagination" class="pagination">
+<!--         <div id="post-pagination" class="pagination">
           {% if paginator.previous_page %}
             <p class="previous">
               {% if paginator.previous_page == 1 %}
@@ -66,7 +66,7 @@ permalink: /blog/
             </p>
           {% endif %}
 
-        </div>
+        </div> -->
 
         </div><! --/col-lg-8 -->
 
