--- a/category.html
+++ b/category.html
@@ -19,7 +19,7 @@ permalink: /category/
                             <li>
                                 <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
                                 <p><a href="{{ post.url }}">{{ post.title }}</a></p>
-                                <em>Posted on {{ post.date | date_to_string }}</em>
+                                <em>发表于 {{ post.date | date_to_string }}</em>
                             </li>
                
             {% endfor %}
