--- a/blog.html
+++ b/blog.html
@@ -7,19 +7,19 @@ permalink: /blog/
 <div class="container mtb">
     <div class="row">
 
-        <! -- BLOG POSTS LIST -->
-        <div class="col-lg-8">
-        {% for post in site.categories['blog'] %}
+            {% for post in site.categories['blog'] %}
                 <! -- Blog Post -->
-                <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}"></p>
+                <a href="{{ post.url | prepend: site.baseurl }}">
+                    <img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}">
+                </a>    
                 <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
-                <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | 作者: {{ post.author }}</csmall></p>
+                <p><csmall>{{ post.date | 日期: "%b %-d, %Y" }}. | 作者: {{ post.author }}</csmall></p>
                 {{ post.excerpt }}
                 <p><a href="{{ post.url | prepend: site.baseurl }}">[查看更多]</a></p>
                 <div class="hline"></div>
 
                 <div class="spacing"></div>
-        {% endfor %}
+            {% endfor %}
 
 <!--         <div id="post-pagination" class="pagination">
           {% if paginator.previous_page %}
