--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ permalink: /
             <h4>常见问题</h4>
             <div class="hline"></div>
             {% for post in site.categories['question'] %} 
-                <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+                <p><a href="{{ post.url | prepend: baseurl }}">{{ post.title }}</a></p>
             {% endfor %}
         </div>
 
@@ -51,7 +51,7 @@ permalink: /
             <h4>最近文章</h4>
             <div class="hline"></div>
             {% for post in site.categories['blog'] limit:5 %} 
-                <p><a href="{{ post.url }}">{{ post.title }}.</a></p>
+                <p><a href="{{ post.url | prepend: baseurl }}">{{ post.title }}.</a></p>
             {% endfor %} 
         </div>
 
