--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,8 @@ permalink: /blog/
 
 <div class="container mtb">
     <div class="row">
+        <! -- BLOG POSTS LIST -->
+        <div class="col-lg-8">
 
             {% for post in site.categories['blog'] %}
                 <! -- Blog Post -->
