--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@ permalink: /about/
             <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
         </div>
         <div class="col-lg-6">
-            <h4>关于「极克 UX」.</h4>
-            <p>「极客」是由几个对设计和技术有着狂热爱好的年轻人创立的用户体验设计咨询品牌，专注于移动设备与应用。</p>
+            <h4>关于「我们」.</h4>
+            <p>「MoEngine」是由几个对设计和技术有着狂热爱好的年轻人创立的用户体验设计咨询品牌，专注于移动设备与应用。</p>
             <p>在 2014 年的时候，我们决定要做一些事情。我们这么热爱技术，热爱分享，为什么不把我们喜欢的东西分享给大家？于是有了我们这么一个网站.</p>
             <p>「用户体验」是个很宽泛的概念。我们总是会听到很多人抱怨「用户体验不好」，也会听到很多设计师说自己「注重用户体验」，但是当我们问起“哪里不好”或者“哪里好”的时候，得到的往往是模糊的回答。所以，我们做了这么一个网站，希望能在这里与大家分享我们对「用户体验」和「设计」理解。</p>
             <p><br/><a href="/contact/" class="btn btn-theme">联系我们</a></p>
