--- a/about.html
+++ b/about.html
@@ -1,20 +1,46 @@
 ---
-layout: about
+layout: default
 title: 关于
+icon: face
 permalink: /about/
 ---
 
-<div class="container mtb">
-    <div class="row">
-        <div class="col-lg-6">
-            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
-        </div>
-        <div class="col-lg-6">
-            <h4>关于「我们」.</h4>
-            <p>「MoEngine」是由几个对设计和技术有着狂热爱好的年轻人创立的用户体验设计咨询品牌，专注于移动设备与应用。</p>
-            <p>在 2014 年的时候，我们决定要做一些事情。我们这么热爱技术，热爱分享，为什么不把我们喜欢的东西分享给大家？于是有了我们这么一个网站.</p>
-            <p>「用户体验」是个很宽泛的概念。我们总是会听到很多人抱怨「用户体验不好」，也会听到很多设计师说自己「注重用户体验」，但是当我们问起“哪里不好”或者“哪里好”的时候，得到的往往是模糊的回答。所以，我们做了这么一个网站，希望能在这里与大家分享我们对「用户体验」和「设计」理解。</p>
-            <p><br/><a href="/contact/" class="btn btn-theme">联系我们</a></p>
-        </div>
-    </div><! --/row -->
-</div><! --/container -->
+<div class="about mdl-card mdl-cell mdl-cell--12-col mdl-shadow--4dp mdl-card__supporting-text">
+  <h4>大蔚陈</h4>
+  <p>出来行走江湖，总是需要一个名号。因为英文名叫 David, 中文名里有个蔚字，所以我管自己叫「大蔚陈」。</p>
+  <br/>
+  <p>我是一名产品经理，也是一名用户体验设计师，在我的网站里，我会分享我对产品还有设计的思考。</p>
+  <br/>
+  <p>我喜欢新技术，爱分享，爱折腾，不喜欢整天谈论所谓的「做人」哲学，更喜欢与认真做事的人一起共事。</p>
+  <br/>
+  <p>如果你喜欢我的文章，或者觉得我写的这些东西还凑合，有点意思，可以点击下面的按钮，请我喝杯咖啡。</p>
+  <br/>
+</div>
+
+<div class="author-info mdl-card mdl-cell mdl-cell--12-col mdl-shadow--4dp">
+  <section class="author">
+    <img class="author-avator" src="/assets/img/avatar.png"></img>
+    <h4>大蔚陈</h4>
+    <p>PM & UX Designer</p>
+  </section>
+<!--   <section class="share">
+    <div class="social">
+      <ul>
+        <li>
+          <a class="btn-floating" href="https://www.facebook.com/idavidchen" target="_blank"><img src="/assets/img/facebook.png"></a>
+        </li>
+        <li>
+          <a class="btn-floating" href="https://github.com/infodavid" target="_blank"><img src="/assets/img/github.png"></a>
+        </li>
+        <li>
+          <a class="btn-floating" href="https://linkdedin" target="_blank"><img src="/assets/img/linkedin.png"></a>
+        </li>
+        <li>
+          <a class="btn-floating" href="http://www.zhihu.com/people/idavidchen"><img src="/assets/img/zhihu.png"></a>
+        </li>
+      </ul>
+    </div>
+  </section>
+ -->
+
+</div>
