--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: index
       </div>
       <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
         {{ post.content | truncate:75}}
-        <p><a class="mdl-button mdl-button--accent" href="{{ post.url | replace_first: '/', '' | prepend: site.baseurl }}">阅读全文</a></p>
+        <p><a class="mdl-button mdl-button--accent" href="{{ post.url | replace_first: '/', '' | prepend: site.baseurl | site.url }}">阅读全文</a></p>
       </div>
       <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
         <div class="david-avatar"></div>
@@ -42,7 +42,7 @@ layout: index
           上一页
           </a>
         {% else %}
-          <a class="pagination-nav__button" href="{{ site.paginate_path | replace: ':num', paginator.previous_page | prepend: site.baseurl}}">
+          <a class="pagination-nav__button" href="{{ paginator.previous_path}}">
             <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon mdl-color--grey mdl-color-text--white" role="presentation">
               <i class="material-icons">arrow_back</i>
             </button>
