--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: index
       </div>
       <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
         {{ post.content | truncate:75}}
-        <p><a class="mdl-button mdl-button--accent" href="{{ post.url | replace_first: '/', '' | prepend: site.baseurl | site.url }}">阅读全文</a></p>
+        <p><a class="mdl-button mdl-button--accent" href="{{ post.url | prepend: site.baseurl | site.url }}">阅读全文</a></p>
       </div>
       <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
         <div class="david-avatar"></div>
@@ -35,15 +35,15 @@ layout: index
   <div class="pagination-nav mdl-color-text--grey-50 mdl-cell mdl-cell--12-col">
       {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
-          <a class="pagination-nav__button" href="{{ site.baseurl }}">
+          <a class="pagination-nav__button" href="/">
             <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon mdl-color--red mdl-color-text--white" role="presentation">
               <i class="material-icons">arrow_back</i>
             </button>
           上一页
           </a>
         {% else %}
-          <a class="pagination-nav__button" href="{{ paginator.previous_path}}">
-            <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon mdl-color--grey mdl-color-text--white" role="presentation">
+          <a class="pagination-nav__button" href="/page/{{ paginator.previous_page }}">
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon mdl-color--red mdl-color-text--white" role="presentation">
               <i class="material-icons">arrow_back</i>
             </button>
           上一页
@@ -59,7 +59,7 @@ layout: index
       <div class="section-spacer"></div>
 
       {% if paginator.next_page %}
-        <a class="pagination-nav__button" href="{{ site.paginate_path | replace: ':num', paginator.next_page | prepend: site.baseurl }}">
+        <a class="pagination-nav__button" href="/page/{{ paginator.next_page }}">
         下一页
           <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon mdl-color--red mdl-color-text--white" role="presentation">
             <i class="material-icons">arrow_forward</i>
